--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ background-color: #f7f7f7;
 width: 300px;
 background-color: #464646;
 border-radius: 10px;
-box-shadow: 0px 4px 4px #00000040;
+box-shadow: 0px 4px 4px #000000;
 font-family: "Helvetica Neue", sans-serif;
 overflow: hidden;
 }
