--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ background-color: #585858;
 }
 
 .botao-cinza-claro {
-background-color: #858282;
+background-color: #ff9100;
 }
 
 button:active {
