--- a/style.css
+++ b/style.css
@@ -55,11 +55,11 @@ background-color: #858282;
 }
 
 .botao-cinza {
-background-color: #585858;
+background-color: #001aff;
 }
 
 .botao-cinza-claro {
-background-color: #ff9100;
+background-color: #333333;
 }
 
 button:active {
